# super-browser

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: verify.yml  weekly-provider-intelligence.yml
configs/: hermes-mcp.yaml
docs/: agent-quickstart.md  anti-detection-results.md  conversation-history.md  printing-press-cli.md  research-airtop.md  research-anchor-orgo.md  research-browser-use.md  setup-walkthrough.md  slack-agent-setup.md
examples/: decodo_proxy.py  tier1_browser_use.py  tier2_browserbase.py  tier3_airtop.py  tier4_rtrvr.py  tier5_orgo.py
examples/workflows/: authenticated-browsing.json  extraction.json  lead-generation.json  monitoring.json  publishing-draft.json
references/: combo-playbook.md  cost-model.md  live-test-matrix.md  orgo-api.md  provider-matrix.md  routing-playbook.md  security-and-approval-policy.md
references/providers/: browserbase-capability-audit.md  browserbase.md  hyperbrowser.md  steel.md
scripts/: super-browser  verify-super-browser
skills/airtop-specialist/: SKILL.md
skills/browser-use-specialist/: SKILL.md
skills/browserbase-stagehand-specialist/: SKILL.md
skills/browserless-specialist/: SKILL.md
skills/decodo-http-specialist/: SKILL.md
skills/hyperbrowser-specialist/: SKILL.md
skills/orgo-specialist/: SKILL.md
skills/playwright-specialist/: SKILL.md
skills/publishing-safety-specialist/: SKILL.md
skills/rtrvr-specialist/: SKILL.md
skills/steel-specialist/: SKILL.md
skills/super-browser-orchestrator/: SKILL.md
skills/super-browser-planner/: SKILL.md
skills/super-browser-verifier/: SKILL.md
src/super_browser/: __init__.py  adapters.py  agent.py  bundle.py  cli.py  deliberation.py  env_checklist.py  live_tests.py  mcp_server.py  models.py  provider_signup.py  providers.py  redaction.py  router.py  runtime.py  setup_helpers.py  setup_walkthrough.py  verifier.py
tests/: test_approvals.py  test_execution.py  test_redaction.py  test_repo_structure.py  test_router_policy.py  test_store_cli_mcp.py  test_verifier.py
