[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-browser"
version = "0.3.1"
description = "Provider-neutral browser and computer automation router for agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Integraterz" }]
keywords = ["browser-automation", "mcp", "agents", "playwright", "browserbase", "browser-use"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1.0"]
playwright = ["playwright>=1.40"]
browserbase = ["browserbase>=1.0,<2", "playwright>=1.40"]
browser-use = ["browser-use-sdk>=3.0,<4"]
# Convenience meta-extra pulling in every Python-SDK-backed provider.
# Orgo, Airtop, Hyperbrowser, Browserless, Decodo and Rtrvr adapters use the
# stdlib HTTP client / a CLI, so they need no extra Python packages here.
all-providers = ["playwright>=1.40", "browserbase>=1.0,<2", "browser-use-sdk>=3.0,<4"]

[project.scripts]
super-browser = "super_browser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/super-browser" = [
  ".mcp.json",
  "README.md",
  "SKILL.md",
  "pyproject.toml",
]
"share/super-browser/.codex-plugin" = [
  ".codex-plugin/plugin.json",
]
"share/super-browser/configs" = [
  "configs/browser-use-profile.sh",
  "configs/hermes-mcp.yaml",
]
"share/super-browser/docs" = [
  "docs/anti-detection-results.md",
  "docs/architecture.svg",
  "docs/plugin-architecture.svg",
  "docs/research-airtop.md",
  "docs/research-anchor-orgo.md",
  "docs/research-browser-use.md",
]
"share/super-browser/examples" = [
  "examples/decodo_proxy.py",
  "examples/tier1_browser_use.py",
  "examples/tier2_browserbase.py",
  "examples/tier3_airtop.py",
  "examples/tier4_rtrvr.py",
  "examples/tier5_orgo.py",
]
"share/super-browser/examples/workflows" = [
  "examples/workflows/authenticated-browsing.json",
  "examples/workflows/desktop-fallback.json",
  "examples/workflows/extraction.json",
  "examples/workflows/lead-generation.json",
  "examples/workflows/monitoring.json",
  "examples/workflows/publishing-draft.json",
  "examples/workflows/testing.json",
]
"share/super-browser/mcp" = [
  "mcp/super-browser-server",
]
"share/super-browser/references" = [
  "references/cost-model.md",
  "references/live-test-matrix.md",
  "references/provider-matrix.md",
  "references/routing-playbook.md",
  "references/security-and-approval-policy.md",
]
"share/super-browser/scripts" = [
  "scripts/super-browser",
  "scripts/verify-super-browser",
]
"share/super-browser/skills/airtop-specialist" = [
  "skills/airtop-specialist/SKILL.md",
]
"share/super-browser/skills/browser-use-specialist" = [
  "skills/browser-use-specialist/SKILL.md",
]
"share/super-browser/skills/browserbase-stagehand-specialist" = [
  "skills/browserbase-stagehand-specialist/SKILL.md",
]
"share/super-browser/skills/browserless-specialist" = [
  "skills/browserless-specialist/SKILL.md",
]
"share/super-browser/skills/decodo-http-specialist" = [
  "skills/decodo-http-specialist/SKILL.md",
]
"share/super-browser/skills/hyperbrowser-specialist" = [
  "skills/hyperbrowser-specialist/SKILL.md",
]
"share/super-browser/skills/orgo-specialist" = [
  "skills/orgo-specialist/SKILL.md",
]
"share/super-browser/skills/playwright-specialist" = [
  "skills/playwright-specialist/SKILL.md",
]
"share/super-browser/skills/publishing-safety-specialist" = [
  "skills/publishing-safety-specialist/SKILL.md",
]
"share/super-browser/skills/rtrvr-specialist" = [
  "skills/rtrvr-specialist/SKILL.md",
]
"share/super-browser/skills/steel-specialist" = [
  "skills/steel-specialist/SKILL.md",
]
"share/super-browser/skills/super-browser-orchestrator" = [
  "skills/super-browser-orchestrator/SKILL.md",
]
"share/super-browser/skills/super-browser-planner" = [
  "skills/super-browser-planner/SKILL.md",
]
"share/super-browser/skills/super-browser-verifier" = [
  "skills/super-browser-verifier/SKILL.md",
]
"share/super-browser/src/super_browser" = [
  "src/super_browser/__init__.py",
  "src/super_browser/adapters.py",
  "src/super_browser/artifacts.py",
  "src/super_browser/bundle.py",
  "src/super_browser/cli.py",
  "src/super_browser/costs.py",
  "src/super_browser/env_checklist.py",
  "src/super_browser/handoff.py",
  "src/super_browser/live_evidence.py",
  "src/super_browser/live_tests.py",
  "src/super_browser/mcp_server.py",
  "src/super_browser/models.py",
  "src/super_browser/policy.py",
  "src/super_browser/production.py",
  "src/super_browser/providers.py",
  "src/super_browser/redaction.py",
  "src/super_browser/router.py",
  "src/super_browser/runtime.py",
  "src/super_browser/setup_helpers.py",
  "src/super_browser/store.py",
  "src/super_browser/verifier.py",
]
"share/super-browser/tests" = [
  "tests/test_approvals.py",
  "tests/test_execution.py",
  "tests/test_redaction.py",
  "tests/test_repo_structure.py",
  "tests/test_router_policy.py",
  "tests/test_store_cli_mcp.py",
  "tests/test_verifier.py",
]
